--- a/netp/tiny/Makefile
+++ b/netp/tiny/Makefile
@@ -4,11 +4,19 @@ CFLAGS = -O2 -Wall -I .
 # This flag includes the Pthreads library on a Linux box.
 # Others systems will probably require something different.
 LIB = -lpthread
+SRCS = $(wildcard tiny[_a-zA-Z]*.c)
+PROGS = $(patsubst %.c,%,$(SRCS))
 
-all: tiny cgi
+all: cgi $(PROGS) csapp.o
 
-tiny: tiny.c csapp.o
-	$(CC) $(CFLAGS) -o tiny tiny.c csapp.o $(LIB)
+#tiny: tiny.c csapp.o
+#	$(CC) $(CFLAGS) -o tiny tiny.c csapp.o $(LIB)
+#
+#tiny_mod: tiny_mod.c csapp.o
+#	$(CC) $(CFLAGS) -o tiny_mod tiny_mod.c csapp.o $(LIB)
+
+%: %.c
+	$(CC) $(CFLAGS) -o $@ $< csapp.o $(LIB)
 
 csapp.o: csapp.c
 	$(CC) $(CFLAGS) -c csapp.c
