--- a/conc/homework/tiny_12_38/Makefile
+++ b/conc/homework/tiny_12_38/Makefile
@@ -1,5 +1,6 @@
 CC = gcc
-CFLAGS = -O2 -Wall -I . -g -pg
+#CFLAGS = -O2 -Wall -I . -g -pg
+CFLAGS = -O2 -Wall -I .
 
 # This flag includes the Pthreads library on a Linux box.
 # Others systems will probably require something different.
